tests/paczka1/small_fuzzy/65335561.err
Error in line 3: vr05I S445 23,1
Error in line 2: THvsbq S445 50,5
